<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematyperef="PackageFormat"?>
<package format="3">
  <name>kiss_slam</name>
  <version>0.0.2</version>
  <description>KISS-SLAM: A Simple, Robust, and Accurate 3D LiDAR SLAM System With Enhanced Generalization Capabilities for ROS2</description>

  <maintainer email="frevo93@gmail.com">Tiziano Guadagnino</maintainer>
  <maintainer email="benedikt.mersch@gmail.com">Benedikt Mersch</maintainer>
  <maintainer email="saurabh.gupta1002@gmail.com">Saurabh Gupta</maintainer>
  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Python dependencies available through rosdep -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-tqdm</exec_depend>
  <exec_depend>python3-kiss-icp</exec_depend>
    
  <!-- KISS-SLAM specific dependencies (install via pip) -->
  <!-- These are not available through rosdep and must be installed manually: -->
  <!-- pip3 install kiss-icp>=1.2.3 map_closures>=2.0.2 open3d>=0.19.0 pydantic>=2 pydantic-settings -->





















































































































































































































































































  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 